# agentjson

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  README_KO.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
demo/: broken.json  broken_complex.json  broken_severe.json  gen_huge_json.py  orjson_dropin_demo.py  run_complex_demo.py  run_demo.py
rust/: Cargo.toml
rust-pyo3/: Cargo.toml  README.md  pyproject.toml
rust-pyo3/src/: lib.rs
rust/src/: arbiter.rs  beam.rs  extract.rs  heuristic.rs  json.rs  lexer.rs  lib.rs  llm.rs  llm_arbiter.rs  llm_fallback.rs  parallel_scan.rs  pipeline.rs  scale.rs  schema.rs  strict.rs  tape.rs  types.rs
rust/tests/: arbiter.rs  pipeline.rs  scale_tape_recursive.rs
src/json_prob_parser/: __init__.py  anthropic_provider.py  arbiter.py  beam.py  claude_agent_sdk_provider.py  cli.py  extract.py  heuristic.py  lexer.py  llm.py  llm_arbiter.py  pipeline.py  rust_backend.py  rust_core.py  scale.py  schema.py  strict.py  types.py
src/orjson/: __init__.py
tests/: test_arbiter.py  test_orjson_shim.py  test_pipeline.py
