[package]
name = "agentjson"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Probabilistic JSON repair library powered by Rust"
repository = "https://github.com/sionic-ai/agentjson"
keywords = ["json", "parser", "repair", "llm", "pyo3"]
categories = ["parsing", "text-processing"]

[lib]
name = "agentjson_rust"
crate-type = ["cdylib"]
path = "rust-pyo3/src/lib.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
json_prob_parser = { package = "agentjson-core", path = "rust" }
