[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "json-prob-parser"
version = "0.1.0"
description = "Arbiter probabilistic JSON repair (Top-K) with fast-path strict parse"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
json-prob-parser = "json_prob_parser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
